--- a/src/Acme.BookStore.Blazor.Client/Pages/Books.razor
+++ b/src/Acme.BookStore.Blazor.Client/Pages/Books.razor
@@ -1,4 +1,7 @@
 ﻿@page "/books"
+@attribute [Authorize(BookStorePermissions.Books.Default)]
+@using Acme.BookStore.Permissions
+@using Microsoft.AspNetCore.Authorization
 @using Volo.Abp.Application.Dtos
 @using Acme.BookStore.Books
 @using Acme.BookStore.Localization
@@ -15,8 +18,11 @@
                 <h2>@L["Books"]</h2>
             </Column>
             <Column ColumnSize="ColumnSize.IsAuto">
-                <Button Color="Color.Primary"
-                        Clicked="OpenCreateModalAsync">@L["NewBook"]</Button>
+                @if (HasCreatePermission)
+                {
+                    <Button Color="Color.Primary"
+                            Clicked="OpenCreateModalAsync">@L["NewBook"]</Button>
+                }
             </Column>
         </Row>
     </CardHeader>
@@ -33,11 +39,13 @@
                         <EntityActions TItem="BookDto" EntityActionsColumn="@EntityActionsColumn">
                             <EntityAction TItem="BookDto"
                                           Text="@L["Edit"]"
-                                          Clicked="() => OpenEditModalAsync(context)" />
+                                          Clicked="() => OpenEditModalAsync(context)" 
+                                          Visible="HasUpdatePermission"/>
                             <EntityAction TItem="BookDto"
                                           Text="@L["Delete"]"
                                           Clicked="() => DeleteEntityAsync(context)"
-                                          ConfirmationMessage="() => GetDeleteConfirmationMessage(context)" />
+                                          ConfirmationMessage="() => GetDeleteConfirmationMessage(context)"
+                                          Visible="HasDeletePermission"/>
                         </EntityActions>
                     </DisplayTemplate>
                 </DataGridEntityActionsColumn>
@@ -178,3 +186,13 @@
         </Form>
     </ModalContent>
 </Modal>
+
+@code
+{
+    public Books() // Constructor
+    {
+        CreatePolicyName = BookStorePermissions.Books.Create;
+        UpdatePolicyName = BookStorePermissions.Books.Edit;
+        DeletePolicyName = BookStorePermissions.Books.Delete;
+    }
+}
